# landingforge

./: .gitignore  README.md
cli/: pyproject.toml
cli/landingforge/: __init__.py  analyzer.py  api.py  cli.py  generator.py  models.py  scraper.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DesignPanel.tsx  ExportButton.tsx  Preview.tsx  ProductForm.tsx  UrlInput.tsx
web/src/lib/: api.ts
