[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "landingforge"
version = "0.1.0"
description = "AI-powered landing page generator inspired by beautiful sites"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.18.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
landingforge = "landingforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["landingforge"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
